// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--type arr2obj --indentType none calls console.info 1`] = `
Array [
  ActionInstance {
    "data": Array [
      "[{\\"id\\":\\"1\\",\\"name\\":\\"John Doe\\",\\"email\\":\\"john-doe@gmail.com\\"},{\\"id\\":\\"2\\",\\"name\\":\\"Peter Smith\\",\\"email\\":\\"petersmith22@outlook.com\\"},{\\"id\\":\\"3\\",\\"name\\":\\"Julia Jones\\",\\"email\\":\\"jjones778@gmail.com\\"}]",
    ],
    "type": "info",
  },
]
`;

exports[`--type arr2obj --indentType space --indentSize 2 calls console.info 1`] = `
Array [
  ActionInstance {
    "data": Array [
      "[
  {
    \\"id\\": \\"1\\",
    \\"name\\": \\"John Doe\\",
    \\"email\\": \\"john-doe@gmail.com\\"
  },
  {
    \\"id\\": \\"2\\",
    \\"name\\": \\"Peter Smith\\",
    \\"email\\": \\"petersmith22@outlook.com\\"
  },
  {
    \\"id\\": \\"3\\",
    \\"name\\": \\"Julia Jones\\",
    \\"email\\": \\"jjones778@gmail.com\\"
  }
]",
    ],
    "type": "info",
  },
]
`;

exports[`--type arr2obj --indentType tab calls console.info 1`] = `
Array [
  ActionInstance {
    "data": Array [
      "[
	{
		\\"id\\": \\"1\\",
		\\"name\\": \\"John Doe\\",
		\\"email\\": \\"john-doe@gmail.com\\"
	},
	{
		\\"id\\": \\"2\\",
		\\"name\\": \\"Peter Smith\\",
		\\"email\\": \\"petersmith22@outlook.com\\"
	},
	{
		\\"id\\": \\"3\\",
		\\"name\\": \\"Julia Jones\\",
		\\"email\\": \\"jjones778@gmail.com\\"
	}
]",
    ],
    "type": "info",
  },
]
`;

exports[`--type obj2arr --indentType none calls console.info 1`] = `
Array [
  ActionInstance {
    "data": Array [
      "{\\"headers\\":[\\"id\\",\\"name\\",\\"email\\"],\\"rows\\":[[\\"1\\",\\"John Doe\\",\\"john-doe@gmail.com\\"],[\\"2\\",\\"Peter Smith\\",\\"petersmith22@outlook.com\\"],[\\"3\\",\\"Julia Jones\\",\\"jjones778@gmail.com\\"]]}",
    ],
    "type": "info",
  },
]
`;

exports[`--type obj2arr --indentType space --indentSize 2 calls console.info 1`] = `
Array [
  ActionInstance {
    "data": Array [
      "{
  \\"headers\\": [
    \\"id\\",
    \\"name\\",
    \\"email\\"
  ],
  \\"rows\\": [
    [
      \\"1\\",
      \\"John Doe\\",
      \\"john-doe@gmail.com\\"
    ],
    [
      \\"2\\",
      \\"Peter Smith\\",
      \\"petersmith22@outlook.com\\"
    ],
    [
      \\"3\\",
      \\"Julia Jones\\",
      \\"jjones778@gmail.com\\"
    ]
  ]
}",
    ],
    "type": "info",
  },
]
`;

exports[`--type obj2arr --indentType tab calls console.info 1`] = `
Array [
  ActionInstance {
    "data": Array [
      "{
	\\"headers\\": [
		\\"id\\",
		\\"name\\",
		\\"email\\"
	],
	\\"rows\\": [
		[
			\\"1\\",
			\\"John Doe\\",
			\\"john-doe@gmail.com\\"
		],
		[
			\\"2\\",
			\\"Peter Smith\\",
			\\"petersmith22@outlook.com\\"
		],
		[
			\\"3\\",
			\\"Julia Jones\\",
			\\"jjones778@gmail.com\\"
		]
	]
}",
    ],
    "type": "info",
  },
]
`;
